Choices no longer overflow out of container

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ footer
 {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .choices a
